2007-10-02  Kjartan Maraas  <kmaraas@gnome.org>

	* doc/reference/tmpl/gnome-dateedit.sgml:
	* file-chooser/testfilechooser.c: #include <config.h> 
	* libgnomeui/gnome-client.c: Compiler warning fixes.
	* libgnomeui/gnome-dateedit.c: Same
	* libgnomeui/gnome-file-entry.c: Again
	* libgnomeui/gnome-icon-entry.c: Improve string.
	Closes bug #315205.
	* libgnomeui/gnome-icon-item.c: Compiler warnings
	* libgnomeui/gnome-password-dialog.c: Compiler warnings
	* libgnomeui/gnome-propertybox.c: Compiler warnings
	* libgnomeui/gnome-thumbnail.c: Remove obsolete g_chmod
	ripped from glib now that we depend on a newer glib anyway.
	Also fix some warnings from a recent patch.

2007-10-01  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnomeui/gnome-scores.c: Document the no scores case.

2007-10-01  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnomeui/gnome-file-entry.c: (browse_dialog_ok),
	(browse_clicked): Fix a crash when user gives a URL
	without trailing '/'.

2007-10-01  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnomeui/gnome-dateedit.c: (gnome_date_edit_set_time),
	(create_children):
	* libgnomeui/gnome-dateedit.h: Add option to show seconds.
	Patch from Goedson Teixeira Paixao <goedson@debian.org>
	Closes bug #473410.

2007-10-01  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Go to 2.21.0.

============================= 2.20.0 =======================

2007-07-30  Christian Persch  <chpe@gnome.org>

	* configure.in: Create .tar.bz2 on dist.

============================= 2.19.1 ========================

2007-07-30  Christian Persch  <chpe@gnome.org>

	* autogen.sh:
	* configure.in:
	* file-chooser/Makefile.am:
	* libgnomeui/Makefile.am: Build fixes.

2007-07-29  Christian Persch  <chpe@gnome.org>

	* libgnomeui/gnome-vfs-util.c:
	(gnome_gdk_pixbuf_new_from_uri_at_scale): Don't crash when failing to
	load the pixbuf. Bug #452907, patch by Felix Riemann.

2007-07-28  Christian Persch  <chpe@gnome.org>

	* configure.in:
	* file-chooser/gtkfilesystemgnomevfs.c: